# learning-atiyah-conjecture

./: .gitignore  atiyah.isc  config.isc  flake.nix  pyproject.toml  train.py  val.py
learning_atiyah/: __init__.py  gen_data.py  model.py  poly.py  tools.py  train.py
