[tool.poetry]
name = "learning-atiyah"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Fennecs Swaddle <meswaddle@gmail.com>"]
packages = [{include = "learning_atiyah"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
